--- a/index.css
+++ b/index.css
@@ -1,43 +1,34 @@
 html,
 body {
-    padding: 0;
-    margin: 0;
-    background: transparent;
+  padding: 0;
+  margin: 0;
+  background: white;
 }
 
 /* Use OS default fonts */
 body {
-    font-family: -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen-Sans,
-    Ubuntu,
-    Cantarell,
-    'Helvetica Neue',
-    sans-serif,
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol';
-    text-rendering: optimizeLegibility;
-    font-feature-settings: 'liga', 'clig', 'kern';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "liga", "clig", "kern";
 }
 
 header {
-    position: absolute;
-    width: 500px;
-    height: 250px;
-    top: 50%;
-    left: 50%;
-    margin-top: -125px;
-    margin-left: -250px;
-    text-align: center;
+  position: absolute;
+  width: 500px;
+  height: 250px;
+  top: 50%;
+  left: 50%;
+  margin-top: -125px;
+  margin-left: -250px;
+  text-align: center;
 }
 
 header h1 {
-    font-size: 60px;
-    font-weight: 200;
-    margin: 0;
-    padding: 0;
-    opacity: 0.7;
+  font-size: 60px;
+  font-weight: 200;
+  margin: 0;
+  padding: 0;
+  opacity: 0.7;
 }
+
+/*# sourceMappingURL=index.css.map */
