Animate block background with audio progress

--- a/index.css
+++ b/index.css
@@ -12878,10 +12878,19 @@ body.has-navbar-fixed-bottom {
   box-sizing: content-box;
   padding: 0;
   border: 0;
+  z-index: 1;
 }
 .main .draggable .text {
   padding: 5px;
   line-height: normal;
+}
+.main .draggable .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  background-color: rgba(91, 192, 222, 0.4);
 }
 
 /*# sourceMappingURL=index.css.map */
