--- a/index.scss
+++ b/index.scss
@@ -200,6 +200,7 @@ body.has-navbar-fixed-bottom {
     .draggable .text {
         padding: 5px;
         line-height: normal;
+        z-index: 1;
     }
 
     .draggable .overlay {
