--- a/index.css
+++ b/index.css
@@ -12753,7 +12753,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 html, body {
-  overflow-y: hidden;
+  overflow: hidden;
   height: 100%;
 }
 
@@ -12824,13 +12824,14 @@ body {
 }
 
 body.has-navbar-fixed-bottom {
-  padding-bottom: 4rem;
+  padding-bottom: 0;
 }
 
 .navbar.level {
   height: 4rem;
   bottom: -4rem;
   transition: bottom 0.5s;
+  background-color: rgba(43, 62, 80, 0.5);
 }
 .navbar.level .button {
   margin: 0 0.75rem;
@@ -12880,6 +12881,7 @@ body.has-navbar-fixed-bottom {
   padding: 0;
   border: 0;
   z-index: 1;
+  opacity: 0;
 }
 .main .draggable .text {
   padding: 5px;
