--- a/index.css
+++ b/index.css
@@ -12869,6 +12869,31 @@ body.has-navbar-fixed-bottom {
   background-image: linear-gradient(#2B3E50 1px, transparent 1px), linear-gradient(90deg, #2B3E50 1px, transparent 1px);
   background-size: 10px 10px;
 }
+.main.is-loading {
+  background-color: #2B3E50;
+  opacity: 0.7;
+  z-index: 100;
+}
+.main.is-loading:after {
+  animation: spinAround 500ms infinite linear;
+  border: 2px solid #dee5ed;
+  border-radius: 290486px;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  content: "";
+  display: block;
+  height: 1em;
+  position: relative;
+  width: 1em;
+  position: absolute;
+  top: calc(50% - 2.5em);
+  left: calc(50% - 2.5em);
+  width: 5em;
+  height: 5em;
+  border-width: 0.4em;
+  zoom: 2;
+  z-index: 100;
+}
 .main .draggable {
   position: absolute;
   top: 10px;
