--- a/index.css
+++ b/index.css
@@ -12869,10 +12869,17 @@ body.has-navbar-fixed-bottom {
   background-image: linear-gradient(#2B3E50 1px, transparent 1px), linear-gradient(90deg, #2B3E50 1px, transparent 1px);
   background-size: 10px 10px;
 }
-.main.is-loading {
+.main.is-loading:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
   background-color: #2B3E50;
-  opacity: 0.7;
-  z-index: 100;
+  z-index: 200;
 }
 .main.is-loading:after {
   animation: spinAround 500ms infinite linear;
@@ -12892,7 +12899,7 @@ body.has-navbar-fixed-bottom {
   height: 5em;
   border-width: 0.4em;
   zoom: 2;
-  z-index: 100;
+  z-index: 200;
 }
 .main .draggable {
   position: absolute;
