--- a/index.scss
+++ b/index.scss
@@ -186,10 +186,17 @@ body.has-navbar-fixed-bottom {
     }
 
     &.is-loading {
-        & {
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.8;
             background-color: $background;
-            opacity: 0.7;
-            z-index: 100;
+            z-index: 200;
         }
 
         &:after {
@@ -201,7 +208,7 @@ body.has-navbar-fixed-bottom {
             height: 5em;
             border-width: 0.4em;
             zoom: 2;
-            z-index: 100;
+            z-index: 200;
         }
     }
 
