Optimize batch adding performance: remember last position

--- a/index.css
+++ b/index.css
@@ -12903,7 +12903,7 @@ body.has-navbar-fixed-bottom {
 }
 .main .draggable {
   position: absolute;
-  top: 10px;
+  top: 0;
   left: 10px;
   width: 200px;
   height: auto;
