--- a/index.scss
+++ b/index.scss
@@ -214,7 +214,7 @@ body.has-navbar-fixed-bottom {
 
     .draggable {
         position: absolute;
-        top: 10px;
+        top: 0;
         left: 10px;
         width: 200px;
         height: auto;
