--- a/index.scss
+++ b/index.scss
@@ -176,7 +176,7 @@ html, body {
         }
     }
 
-    .draggable {
+    .sound-block {
         position: absolute;
         top: 0;
         left: 10px;
@@ -191,13 +191,13 @@ html, body {
         opacity: 0;
     }
 
-    .draggable .text {
+    .sound-block .text {
         padding: 5px;
         line-height: normal;
         z-index: 1;
     }
 
-    .draggable .overlay {
+    .sound-block .overlay {
         position: absolute;
         top: 0;
         left: 0;
@@ -216,8 +216,8 @@ html, body {
         position: absolute;
         right: 0;
         width: 100%;
-        height: 200px;
-        bottom: -200px;
+        height: 100px;
+        bottom: -100px;
         transition: bottom 0.5s;
         background-color: rgba($navbar-background-color, 0.95);
         z-index: 2000;
@@ -233,53 +233,62 @@ html, body {
     }
 }
 
-.navbar .level-right {
+.navbar .level-right,
+.navbar .level-left {
     & {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+    }
+
+    .button {
+        width: 48px;
+        height: 48px;
+        margin: 0;
+        border: 2px solid $border;
+    }
+
+    .button + .button {
+        margin-top: 2px;
+    }
+
+    .button .fa {
+        font-size: $size-large;
+        margin: 0;
+    }
+}
+
+.navbar .level-right {
+    & {
         justify-content: flex-start;
         margin-top: -48px;
     }
 
     .button {
-        width: 48px;
-        height: 48px;
-        margin: 0;
-        border: 2px solid $border;
         border-right: 0;
-    }
-
-    .button + .button {
-        margin-top: 35px;
-    }
-
-    .button .fa {
-        font-size: $size-large;
-        margin: 0;
     }
 }
 
 .navbar .level-left {
     .button {
-        width: 48px;
-        height: 48px;
-        margin: 0;
-        border: 2px solid $border;
-    }
-
-    .button .fa {
-        font-size: $size-large;
-        margin: 0;
+        border-left: 0;
     }
 }
 
-.has-bottom .navbar.level {
+.has-bottom:not(.has-right) .navbar.level {
     & {
         bottom: 0;
     }
 
     .edit {
         color: $green;
+    }
+}
+
+.has-right .navbar.level {
+    .deck-toggle {
+        margin-top: -48px !important;
+        color: $green !important;
     }
 }
 
