--- a/index.scss
+++ b/index.scss
@@ -216,6 +216,8 @@ html, body {
 
     .sound-block {
         position: absolute;
+        left: 10px;
+        top: 0;
         width: 200px;
         height: auto;
         overflow: hidden;
